--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,102 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+    --font-family: "Poppins", sans-serif;
+    --maxwidth: 1400px;
+    --color-light: #f3f3f3;
+    --color-dark: #333333;
+    --color-primary: #0962f0;
+    --padding: 40px;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    font-family: var(--font-family) !important;
+    margin: 0;
+    padding: 0;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.parent-container {
+    position: relative;
+    padding: var(--padding);
+}
+.child-container {
+    min-height: inherit;
+}
+.title-container {
+    max-width: 1000px;
+    margin: 0 auto;
+    margin-bottom: 5rem;
+}
+.font-header {
+    font-size: 58px;
+    line-height: 66px;
+    font-weight: 600;
+}
+.font-sub {
+    font-size: 30px;
+    line-height: 38px;
+    font-weight: 600;
+}
+.font-paragraph {
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 500;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+    border: 1px solid transparent;
+    transition: 0.2s ease-in-out;
+    padding: 10px 30px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+@media (max-width: 1024px) {
+    .font-header {
+        font-size: 48px;
+        line-height: 56px;
+    }
+    .font-sub {
+        font-size: 25px;
+        line-height: 33px;
+    }
+    .font-paragraph {
+        font-size: 18px;
+        line-height: 26px;
+    }
+}
+
+@media (max-width: 768px) {
+    .font-header {
+        font-size: 40px;
+        line-height: 48px;
+    }
+    .font-sub {
+        font-size: 20px;
+        line-height: 28px;
+    }
+    .font-paragraph {
+        font-size: 17px;
+        line-height: 25px;
+    }
+}
+
+@media (max-width: 550px) {
+    .font-header {
+        font-size: 38px;
+        line-height: 46px;
+    }
+    .font-sub {
+        font-size: 18px;
+        line-height: 26px;
+    }
+    .font-paragraph {
+        font-size: 16px;
+        line-height: 24px;
+    }
+}
+
+@media (max-width: 460px) {
+    .font-header {
+        font-size: 30px;
+        line-height: 38px;
+    }
 }
