--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,16 @@ body {
     line-height: 28px;
     font-weight: 500;
 }
-
+.font-about {
+    font-size: 150px;
+    line-height: 100px;
+    font-weight: 600;
+}
+.font-tech {
+    font-size: 300px;
+    line-height: 200px;
+    font-weight: 600;
+}
 .navbar .navlink:hover {
     color: var(--color-primary) !important;
 }
@@ -73,6 +82,16 @@ button {
     padding: 10px 30px;
 }
 
+@media (max-width: 1330px) {
+    .font-about {
+        font-size: 120px;
+        line-height: 100px;
+    }
+    .font-tech {
+        font-size: 220px;
+        line-height: 200px;
+    }
+}
 @media (max-width: 1024px) {
     .font-header {
         font-size: 48px;
@@ -85,6 +104,14 @@ button {
     .font-paragraph {
         font-size: 18px;
         line-height: 26px;
+    }
+    .font-about {
+        font-size: 100px;
+        line-height: 100px;
+    }
+    .font-tech {
+        font-size: 200px;
+        line-height: 200px;
     }
 }
 
@@ -101,6 +128,8 @@ button {
         font-size: 17px;
         line-height: 25px;
     }
+    .rate {
+    }
 }
 
 @media (max-width: 550px) {
@@ -115,6 +144,14 @@ button {
     .font-paragraph {
         font-size: 16px;
         line-height: 24px;
+    }
+    .font-about {
+        font-size: 60px;
+        line-height: 100px;
+    }
+    .font-tech {
+        font-size: 140px;
+        line-height: 200px;
     }
 }
 
